--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,21 @@ python:
 sudo: false
 
 install:
+ - if [ "$TRAVIS_PYTHON_VERSION" == "2.6" ]; then pip install unittest2; fi
+
+ # Coverage 4.0 doesn't support Python 3.2
+ - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install "coverage<4"; fi
+ - if [ "$TRAVIS_PYTHON_VERSION" != "3.2" ]; then pip install coverage; fi
 
 script:
- - python -m unittest tests
+ - coverage run --source=olefile -m nose tests
 
 after_success:
+ - pip install coveralls
+ - coveralls
+
+after_script:
+ - coverage report
  - pip install pep8 pyflakes
  - pyflakes .
  - pep8 --statistics --count .
