--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,9 @@ indent_style = space
 
 trim_trailing_whitespace = true
 
+[*.bat]
+end_of_line = crlf
+
 [*.yml]
 # Two-space indentation
 indent_size = 2
