--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: python
 python:
  - pypy
  - pypy3
- - 2.6
  - 2.7
- - 3.2
  - 3.3
  - 3.4
  - 3.5
@@ -14,11 +12,7 @@ python:
 sudo: false
 
 install:
- - if [ "$TRAVIS_PYTHON_VERSION" == "2.6" ]; then pip install unittest2; fi
-
- # Coverage 4.0 doesn't support Python 3.2
- - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then pip install "coverage<4"; fi
- - if [ "$TRAVIS_PYTHON_VERSION" != "3.2" ]; then pip install coverage; fi
+ - pip install coverage
 
 script:
  - coverage run --source=olefile -m nose tests
