Add testing for the Python 3.7 final release

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: python
 cache: pip
-python:
- - pypy
- - pypy3
- - 2.7
- - 3.4
- - 3.5
- - 3.6
- - 3.7-dev
-
-# Use container-based infrastructure
 sudo: false
+
+matrix:
+  include:
+    - python: 2.7
+    - python: 3.4
+    - python: 3.5
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+      sudo: true
+    - python: pypy
+    - python: pypy3
 
 install:
  - pip install coverage
@@ -27,6 +29,3 @@ after_script:
  - pip install pycodestyle pyflakes
  - pyflakes .
  - pycodestyle --statistics --count .
-
-matrix:
-  fast_finish: true
