--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,18 @@ cache: pip
 
 matrix:
   include:
-    - python: 2.7
-    - python: 3.5
-    - python: 3.6
-    - python: 3.7
-    - python: 3.8
-    - python: pypy
-    - python: pypy3
+      - { python: '2.7', env: }
+      - { arch: arm64, python: '2.7', env: }
+      - { python: '3.5', env: }
+      - { arch: arm64, python: '3.5', env: }
+      - { python: '3.6', env: }
+      - { arch: arm64, python: '3.6', env: }
+      - { python: '3.7', env: }
+      - { arch: arm64, python: '3.7', env: }
+      - { python: '3.8', env: }
+      - { arch: arm64, python: '3.8', env: }
+      - { python: 'pypy', env: }
+      - { python: 'pypy3', env: }
 
 install:
  - pip install coverage
