Don't complain about non-runnable main()

--- a/.coveragerc
+++ b/.coveragerc
@@ -9,5 +9,7 @@ exclude_lines =
     # Don't complain if non-runnable code isn't run:
     if 0:
     if __name__ == .__main__.:
+    def main
+
     # Don't complain about debug code
     log.debug
